src/test/error/main.c

int main() {
    f();
}

int e() {
    return main();
}